deployment/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geocode
  labels:
    name: geocode
    app: geocode
spec:
  revisionHistoryLimit: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      app: geocode
  template:
    metadata:
      labels:
        app: geocode
    spec:
      hostNetwork: false
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - name: geocode
        image: ghcr.io/saidsef/faas-reverse-geocoding:v2022.12
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          runAsGroup: 65534
          runAsUser: 65534
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        resources:
          requests:
           memory: "1Gi"
           cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "200m"
        livenessProbe:
          exec:
            command:
              - pgrep
              - geocode
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 2
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 2
          successThreshold: 1
          timeoutSeconds: 3
