deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: geocode
  labels:
    name: geocode
    app: geocode
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 60
  selector:
    app: geocode
  ports:
    - name: tcp-term
      protocol: TCP
      port: 8080
